K8S/platforms-deploy.yml
# kubectl apply -f platforms-deploy.yml
# kubectl get deployments
# kubectl get pods
# kubectl get services
# kubectl delete deployment platforms-deploy
# kubectl rollout restart deployment platforms-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: mkuwan/platformservice:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"        
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
