K8S/rabbitmq-deploy.yml
# kubectl apply -f rabbitmq-deploy.yml
# kubectl get services
# kubectl get deployments
# kubectl get pods
# kubectl get pods -o wide
# kubectl get nodes
# kubectl get ns

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 15672
          name: rabbit-mgmnt-pt
        - containerPort: 5672
          name: rabbit-msg-pt
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: rabbit-mgmnt-pt
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rabbit-msg-pt
    protocol: TCP
    port: 5672
    targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: rabbit-mgmnt-pt
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rabbit-msg-pt
    protocol: TCP
    port: 5672
    targetPort: 5672
