K8S/ingress-srv.yml
# kubectl apply -f ingress-srv.yml
# kubectl get services
# kubectl get Ingress
# kubectl get ns
# kubectl delete all  --all -n ingress-nginx

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: mkuwa.localhost
    http:
      paths:
      - pathType: Prefix
        path: /api/platforms
        backend:
          service:
            name: platforms-clusterip-service
            port: 
              number: 80
      - pathType: Prefix
        path: /api/c/platforms
        backend:
          service:
            name: commands-clusterip-service
            port: 
              number: 80
      - pathType: Prefix
        path: /mssql
        backend:
          service:
            name: mssql-clusterip-service
            port: 
              number: 1443
